# idris-codegen-wasm

./: .gitignore  README.md  idris-codegen-wasm.cabal
rts/: index.html  rts.ts  rts.wast  webassembly.d.ts
src/: Main.hs
src/IRTS/: CodegenWasm.hs
