Name:           idris-codegen-wasm
Version:        0.0.1.0
License:        MIT
Author:         Ilya Rezvov
Maintainer:	    Ilya Rezvov <rezvov.ilya@gmail.com>
Build-Type:	    Simple
Cabal-Version:  >= 1.8
Extra-source-files:
    rts/*

Executable idris-codegen-wasm
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris >= 1.2
                , base
                , containers
                , directory
                , filepath
                , bytestring
                , haskeline >= 0.7
                , mtl
                , transformers
                , cereal >= 0.5
                , utf8-string >= 1.0
                , wasm

  other-modules: IRTS.CodegenWasm
  default-language: Haskell2010

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields